src/OnionScript.Compiler/Grammar/OnionScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from e:\PackageDev\OnionScript\src\OnionScript.Compiler\Grammar\OnionScript.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace OrbHall.OnionScript.Compiler {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class OnionScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		WHITESPACE=25, STATEMENT_BEGIN=26, STATEMENT_END=27, STATEMENT_BEGIN_IGNORE_WHITESPACE=28, 
		STATEMENT_END_IGNORE_WHITESPACE=29, TEXT=30, BOOLEAN=31, FLOAT=32, INTEGER=33, 
		IDENTIFIER=34, COMMENT=35, ENDL=36;
	public const int
		RULE_script = 0, RULE_statement = 1, RULE_methodcall = 2, RULE_method_operation = 3, 
		RULE_operator_import = 4, RULE_operator_function = 5, RULE_operator_let = 6, 
		RULE_operator_return = 7, RULE_operator_for = 8, RULE_operator_while = 9, 
		RULE_operator_dowhile = 10, RULE_operator_set = 11, RULE_operator_add = 12, 
		RULE_operator_subtract = 13, RULE_operator_multiply = 14, RULE_operator_divide = 15, 
		RULE_operator_modulus = 16, RULE_operator_not = 17, RULE_operator_and = 18, 
		RULE_operator_or = 19, RULE_operator_nor = 20, RULE_operator_nand = 21, 
		RULE_operator_equal = 22, RULE_operator_notequal = 23, RULE_operator_greaterthan = 24, 
		RULE_operator_greaterthanequal = 25, RULE_operator_lessthan = 26, RULE_operator_lessthanequal = 27, 
		RULE_import_statement = 28, RULE_anonymous_function = 29, RULE_function_definition = 30, 
		RULE_function_return = 31, RULE_variable_definition = 32, RULE_text = 33, 
		RULE_integer = 34, RULE_float = 35, RULE_boolean = 36, RULE_identifier = 37, 
		RULE_argument_text = 38, RULE_argument_integer = 39, RULE_argument_float = 40, 
		RULE_argument_number = 41, RULE_argument_boolean = 42, RULE_argument_statement = 43, 
		RULE_argument_any = 44;
	public static readonly string[] ruleNames = {
		"script", "statement", "methodcall", "method_operation", "operator_import", 
		"operator_function", "operator_let", "operator_return", "operator_for", 
		"operator_while", "operator_dowhile", "operator_set", "operator_add", 
		"operator_subtract", "operator_multiply", "operator_divide", "operator_modulus", 
		"operator_not", "operator_and", "operator_or", "operator_nor", "operator_nand", 
		"operator_equal", "operator_notequal", "operator_greaterthan", "operator_greaterthanequal", 
		"operator_lessthan", "operator_lessthanequal", "import_statement", "anonymous_function", 
		"function_definition", "function_return", "variable_definition", "text", 
		"integer", "float", "boolean", "identifier", "argument_text", "argument_integer", 
		"argument_float", "argument_number", "argument_boolean", "argument_statement", 
		"argument_any"
	};

	private static readonly string[] _LiteralNames = {
		null, "'import'", "'func'", "'let'", "'return'", "'for'", "'while'", "'dowhile'", 
		"'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'not'", "'and'", "'or'", "'nor'", 
		"'nand'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", null, "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "WHITESPACE", "STATEMENT_BEGIN", "STATEMENT_END", "STATEMENT_BEGIN_IGNORE_WHITESPACE", 
		"STATEMENT_END_IGNORE_WHITESPACE", "TEXT", "BOOLEAN", "FLOAT", "INTEGER", 
		"IDENTIFIER", "COMMENT", "ENDL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "OnionScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static OnionScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public OnionScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public OnionScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(OnionScriptParser.Eof, 0); }
		public Import_statementContext[] import_statement() {
			return GetRuleContexts<Import_statementContext>();
		}
		public Import_statementContext import_statement(int i) {
			return GetRuleContext<Import_statementContext>(i);
		}
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 90; import_statement();
					}
					} 
				}
				State = 95;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 99;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==STATEMENT_BEGIN || _la==STATEMENT_BEGIN_IGNORE_WHITESPACE) {
				{
				{
				State = 96; statement();
				}
				}
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 102; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public MethodcallContext methodcall() {
			return GetRuleContext<MethodcallContext>(0);
		}
		public Function_definitionContext function_definition() {
			return GetRuleContext<Function_definitionContext>(0);
		}
		public Function_returnContext function_return() {
			return GetRuleContext<Function_returnContext>(0);
		}
		public Variable_definitionContext variable_definition() {
			return GetRuleContext<Variable_definitionContext>(0);
		}
		public Anonymous_functionContext anonymous_function() {
			return GetRuleContext<Anonymous_functionContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 109;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104; methodcall();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 105; function_definition();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 106; function_return();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 107; variable_definition();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 108; anonymous_function();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodcallContext : ParserRuleContext {
		public ITerminalNode STATEMENT_BEGIN() { return GetToken(OnionScriptParser.STATEMENT_BEGIN, 0); }
		public Method_operationContext method_operation() {
			return GetRuleContext<Method_operationContext>(0);
		}
		public ITerminalNode STATEMENT_END() { return GetToken(OnionScriptParser.STATEMENT_END, 0); }
		public MethodcallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodcall; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodcall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodcallContext methodcall() {
		MethodcallContext _localctx = new MethodcallContext(Context, State);
		EnterRule(_localctx, 4, RULE_methodcall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(STATEMENT_BEGIN);
			State = 112; method_operation();
			State = 113; Match(STATEMENT_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Method_operationContext : ParserRuleContext {
		public Method_operationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_method_operation; } }
	 
		public Method_operationContext() { }
		public virtual void CopyFrom(Method_operationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class OperatorNandContext : Method_operationContext {
		public Operator_nandContext operator_nand() {
			return GetRuleContext<Operator_nandContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_booleanContext[] argument_boolean() {
			return GetRuleContexts<Argument_booleanContext>();
		}
		public Argument_booleanContext argument_boolean(int i) {
			return GetRuleContext<Argument_booleanContext>(i);
		}
		public OperatorNandContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorNand(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorSetContext : Method_operationContext {
		public Operator_setContext operator_set() {
			return GetRuleContext<Operator_setContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public Argument_anyContext argument_any() {
			return GetRuleContext<Argument_anyContext>(0);
		}
		public OperatorSetContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorSet(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorDivideContext : Method_operationContext {
		public Operator_divideContext operator_divide() {
			return GetRuleContext<Operator_divideContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorDivideContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorDivide(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorGreaterThanEqualContext : Method_operationContext {
		public Operator_greaterthanequalContext operator_greaterthanequal() {
			return GetRuleContext<Operator_greaterthanequalContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorGreaterThanEqualContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorGreaterThanEqual(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorAddContext : Method_operationContext {
		public Operator_addContext operator_add() {
			return GetRuleContext<Operator_addContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorAddContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorAdd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorAndContext : Method_operationContext {
		public Operator_andContext operator_and() {
			return GetRuleContext<Operator_andContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_booleanContext[] argument_boolean() {
			return GetRuleContexts<Argument_booleanContext>();
		}
		public Argument_booleanContext argument_boolean(int i) {
			return GetRuleContext<Argument_booleanContext>(i);
		}
		public OperatorAndContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorGreaterThanContext : Method_operationContext {
		public Operator_greaterthanContext operator_greaterthan() {
			return GetRuleContext<Operator_greaterthanContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorGreaterThanContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorGreaterThan(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorCallMethodContext : Method_operationContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_anyContext[] argument_any() {
			return GetRuleContexts<Argument_anyContext>();
		}
		public Argument_anyContext argument_any(int i) {
			return GetRuleContext<Argument_anyContext>(i);
		}
		public OperatorCallMethodContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorCallMethod(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorWhileContext : Method_operationContext {
		public Operator_whileContext operator_while() {
			return GetRuleContext<Operator_whileContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_booleanContext argument_boolean() {
			return GetRuleContext<Argument_booleanContext>(0);
		}
		public Anonymous_functionContext anonymous_function() {
			return GetRuleContext<Anonymous_functionContext>(0);
		}
		public MethodcallContext methodcall() {
			return GetRuleContext<MethodcallContext>(0);
		}
		public OperatorWhileContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorWhile(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorSubtractContext : Method_operationContext {
		public Operator_subtractContext operator_subtract() {
			return GetRuleContext<Operator_subtractContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorSubtractContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorSubtract(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorOrContext : Method_operationContext {
		public Operator_orContext operator_or() {
			return GetRuleContext<Operator_orContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_booleanContext[] argument_boolean() {
			return GetRuleContexts<Argument_booleanContext>();
		}
		public Argument_booleanContext argument_boolean(int i) {
			return GetRuleContext<Argument_booleanContext>(i);
		}
		public OperatorOrContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorOr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorLessThanEqualContext : Method_operationContext {
		public Operator_lessthanequalContext operator_lessthanequal() {
			return GetRuleContext<Operator_lessthanequalContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorLessThanEqualContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorLessThanEqual(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorNotContext : Method_operationContext {
		public Operator_notContext operator_not() {
			return GetRuleContext<Operator_notContext>(0);
		}
		public ITerminalNode WHITESPACE() { return GetToken(OnionScriptParser.WHITESPACE, 0); }
		public Argument_booleanContext argument_boolean() {
			return GetRuleContext<Argument_booleanContext>(0);
		}
		public OperatorNotContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorNot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorNorContext : Method_operationContext {
		public Operator_norContext operator_nor() {
			return GetRuleContext<Operator_norContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_booleanContext[] argument_boolean() {
			return GetRuleContexts<Argument_booleanContext>();
		}
		public Argument_booleanContext argument_boolean(int i) {
			return GetRuleContext<Argument_booleanContext>(i);
		}
		public OperatorNorContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorNor(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorMultiplyContext : Method_operationContext {
		public Operator_multiplyContext operator_multiply() {
			return GetRuleContext<Operator_multiplyContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_numberContext[] argument_number() {
			return GetRuleContexts<Argument_numberContext>();
		}
		public Argument_numberContext argument_number(int i) {
			return GetRuleContext<Argument_numberContext>(i);
		}
		public OperatorMultiplyContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperatorMultiply(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OperatorDoWhileContext : Method_operationContext {
		public Operator_dowhileContext operator_dowhile() {
			return GetRuleContext<Operator_dowhileContext>(0);
		}
		public ITerminalNode[] WHITESPACE() { return GetTokens(OnionScriptParser.WHITESPACE); }
		public ITerminalNode WHITESPACE(int i) {
			return GetToken(OnionScriptParser.WHITESPACE, i);
		}
		public Argument_booleanContext argument_boolean() {
			return GetRuleContext<Argument_booleanContext>(0);
		}
		public Anonymous_functionContext anonymous_function() {
			return GetRuleContext<Anonymous_functionContext>(0);
		}
		public MethodcallContext methodcall() {
			return GetRuleContext<MethodcallContext>(0);
		}
		public OperatorDoWhileContext(Method_operationContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IOnionScriptVisitor<TResult> typedVisitor = visitor as IOnionScriptVisitor<TResult>;
